--- a/about.html
+++ b/about.html
@@ -20,5 +20,6 @@
     <p>
       In id mattis odio. Ut pellentesque ante at tortor vehicula sodales. Sed nunc orci, ullamcorper eu erat nec, ultricies vestibulum est. Vestibulum dignissim dolor eu felis consectetur, ut malesuada felis sodales. Duis commodo lorem eget gravida blandit. Quisque cursus lectus non blandit consequat. Pellentesque et elit lacus. Sed mauris leo, vulputate eget suscipit porttitor, viverra ut ante. Mauris erat lacus, laoreet id interdum eget, venenatis in purus. Fusce dictum eu mi sed eleifend.
     </p>
+    <a href="http://joshesguerra.github.io">Home</a>
   </body>
 </html>
