--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Home</title>
-  </head>
-  <body>
-    <h1>Home</h1>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nisl mauris, tempor vel pellentesque bibendum, porttitor vel leo. Donec blandit dui sed porttitor sollicitudin. Mauris tincidunt et massa euismod semper. Integer sodales vehicula nunc. Donec condimentum lectus a lacus posuere hendrerit. In fermentum, ante a molestie vestibulum, lacus leo finibus orci, a ornare nunc turpis nec tellus. Vivamus eget suscipit mi. Fusce sed est non nunc mattis laoreet eget in dui. Curabitur vestibulum elit vel efficitur tincidunt. Quisque nisi sapien, semper eget est ac, fringilla lacinia erat. Praesent malesuada fermentum orci, in suscipit diam porta non. Praesent elementum leo lacus, ac fringilla eros sodales et. Nam sit amet facilisis purus. Pellentesque porta placerat lacus, id tempus quam volutpat id.
-    </p>
-    <a href="http://joshesguerra.github.io/about.html">About</a>
-  </body>
-</html>
+<head>
+<script>
+function myFunction() {
+  document.getElementById("demo").innerHTML = "Paragraph changed.";
+}
+</script>
+</head>
+<body>
+
+<h2>JavaScript in Head</h2>
+
+<p id="demo">A Paragraph.</p>
+
+<button type="button" onclick="myFunction()">Try it</button>
+
+</body>
+</html> 
