--- a/index.html
+++ b/index.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script>
-function myFunction() {
-  document.getElementById("demo").innerHTML = "Paragraph changed.";
-}
-</script>
+<title>Font Awesome 5 Icons</title>
+<meta name='viewport' content='width=device-width, initial-scale=1'>
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
 </head>
 <body>
 
-<h2>JavaScript in Head</h2>
+<h1>fab fa-instagram</h1>
 
-<p id="demo">A Paragraph.</p>
+<i class='w3-third fab fa-instagram'></i>
+<i class='w3-third fab fa-instagram' style='font-size:24px'></i>
+<i class='w3-third fab fa-instagram' style='font-size:36px'></i>
+<i class='w3-third fab fa-instagram' style='font-size:48px;color:red'></i>
+<br>
 
-<button type="button" onclick="myFunction()">Try it</button>
+<p>Used on a button:</p>
+<button style='font-size:24px'>Button <i class='fab fa-instagram'></i></button>
+
+<p>Unicode:</p>
+<i style='font-size:24px' class='fab'>&#xf16d;</i>
 
 </body>
-</html> 
+</html>
+
