--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <h1>fab fa-instagram</h1>
 
 <i class='w3-third fab fa-instagram'></i>
-<i class='w3-third fab fa-instagram' style='font-size:24px'></i>
-<i class='w3-third fab fa-instagram' style='font-size:36px'></i>
-<i class='w3-third fab fa-instagram' style='font-size:48px;color:red'></i>
+<i class='w3-third fab fa-instagram'></i>
+<i class='w3-third fab fa-instagram'></i>
+<i class='w3-third fab fa-instagram'></i>
 <br>
 
 <p>Used on a button:</p>
