--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 <h1>fab fa-instagram</h1>
 
-<i class='w3-third fab fa-instagram'></i>
-<i class='w3-third fab fa-instagram'></i>
-<i class='w3-third fab fa-instagram'></i>
-<i class='w3-third fab fa-instagram'></i>
+<i class='w3-third fab fa-instagram' style="font-size:48px;"></i>
+<i class='w3-third fab fa-instagram' style="font-size:48px;"></i>
+<i class='w3-third fab fa-instagram' style="font-size:48px;"></i>
+<i class='w3-third fab fa-instagram' style="font-size:48px;"></i>
 <br>
 
 <p>Used on a button:</p>
