--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
 
 <h1>fab fa-instagram</h1>
-
-<i class='w3-jumbo w3-third fab fa-instagram'></i>
-<i class='w3-jumbo w3-third fab fa-instagram'></i>
-<i class='w3-jumbo w3-third fab fa-instagram'></i>
-<i class='w3-jumbo w3-third fab fa-instagram'></i>
 <br>
-
+<i class="w3-jumbo w3-third fab fa-instagram" style="font-size:300px"></i>
+<i class="w3-jumbo w3-third fab fa-instagram" style="font-size:300px"></i>
+<i class="w3-jumbo w3-third fab fa-instagram" style="font-size:300px"></i>
+<br>
+&#xf26e;
+<br>
 <p>Used on a button:</p>
 <button style='font-size:24px'>Button <i class='fab fa-instagram'></i></button>
 
