--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <i class="w3-jumbo w3-third fab fa-instagram" style="font-size:300px"></i>
 <i class="w3-jumbo w3-third fab fa-instagram" style="font-size:300px"></i>
 <br>
-&#xf26e;
+<i style='font-size:24px' class='fab'>&#xf16d;</i>
 <br>
 <p>Used on a button:</p>
 <button style='font-size:24px'>Button <i class='fab fa-instagram'></i></button>
