--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
 <p>Unicode:</p>
 <i style='font-size:24px' class='fab'>&#xf16d;</i>
-
+<br>
+<i class="fas fa-phone-alt"></i>
 </body>
 </html>
 
