--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <p>Unicode:</p>
 <i style='font-size:24px' class='fab'>&#xf16d;</i>
 <br>
-<i class="fas fa-phone-alt"></i>
+<i class="fas fa-phone-alt" style="font-size:300px"></i>
 </body>
 </html>
 
