--- a/index.html
+++ b/index.html
@@ -1,28 +1,82 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Font Awesome 5 Icons</title>
-<meta name='viewport' content='width=device-width, initial-scale=1'>
+  <title>
+  CHSKC Resources
+  </title>
+  
+  <head>
+    <title> CHS Korean Club </title>
+    <link rel="icon" href="icon2.png">
+    
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
-</head>
+<style>
+body {font-family: "Helvetica", "Verdana", Sans-serif;}
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Playfair Display";
+  letter-spacing: 5px;
+}
+
+tr:nth-child(even) {background-color: #E38080;}
+  
+</style>
 <body>
 
-<h1>fab fa-instagram</h1>
+<!-- Navbar (sit on top) -->
+<div class="w3-top" class="#top w3 w3-top" w3-margin>
+  <div class="w3-container">
+    <div class="w3-bar w3-white w3-padding w3-card w3-wide" style="letter-spacing:4px;">
+    <a href="http://liliumorca.github.io" class="w3-bar-item w3-button">CHS Korean Club</a>
+    <!-- Right-sided navbar links. Hide them on small screens -->
+      <div class="w3-right w3-hide-small">
+      <a href="https://liliumorca.github.io/" class="w3-bar-item w3-button"><i class="fas fa-home"></i>Home</a>
+      <a href="http://liliumorca.github.io/about.html" class="w3-bar-item w3-button"><i class="far fa-question-circle"></i>About Us</a>
+      <a href="https://liliumorca.github.io/activities.html" class="w3-bar-item w3-button"><i class="fas fa-image"></i></i>Activities</a>
+      <a href="https://liliumorca.github.io/contacts.html" class="w3-bar-item w3-button"><i class="fas fa-address-book"></i>Contacts</a>
+      <a href="https://liliumorca.github.io/resources.html" class="w3-bar-item w3-button"><i class="fas fa-folder"></i>Resources</a>
+      </div>
+    </div>
+  </div>
+</div>
 <br>
-<i class="w3-jumbo w3-third fab fa-instagram" style="font-size:300px"></i>
-<i class="w3-jumbo w3-third fab fa-instagram" style="font-size:300px"></i>
-<i class="w3-jumbo w3-third fab fa-instagram" style="font-size:300px"></i>
 <br>
-<i style='font-size:24px' class='fab'>&#xf16d;</i>
 <br>
-<p>Used on a button:</p>
-<button style='font-size:24px'>Button <i class='fab fa-instagram'></i></button>
+<br>
+  
+<!-- Page content -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+<body>
 
-<p>Unicode:</p>
-<i style='font-size:24px' class='fab'>&#xf16d;</i>
+<div class="w3-container">
+  <h2 style="color:#B40000;"><b>Resources</b></h2>
+
+  <table class="w3-table">
+    <tr><img src="hangul chart_1.jpg" class="w3-border w3-padding" alt="Hangul Basics"></tr>
+    <tr><b>Hangul Basics</b></tr>
+    <tr><img src="hangul chart_2.jpg" class="w3-border w3-padding" alt="Hangul Intermediate"></tr>
+    <tr><b>Hangul Intermediate</b></tr>
+    <tr><img src="hangul chart_3.jpg" class="w3-border w3-padding" alt="Hangul Advance"></tr>
+    <tr><b>Hangul Advance</b></tr>
+  </table>
+</div>
+
+  <a href="#top"><i class="fas fa-chevron-circle-up fa-3x" style="color: #B40000; float:right;">&nbsp;</i></a>
+</body>
+<!-- End page content -->
 <br>
-<i class="fas fa-phone-alt" style="font-size:300px"></i>
+<br>
+<br>
+<br>
+<br>
+<br>
+<!-- Footer -->
+<div>    
+<footer class="w3-center w3-light-grey w3-padding-32">
+  <p>Coronado Korean Club</p>
+  </footer>
+    </div>
 </body>
 </html>
 
