--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@ h1, h2, h3, h4, h5, h6 {
   letter-spacing: 5px;
 }
 
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+  
 tr:nth-child(even) {background-color: #E38080;}
   
 </style>
@@ -62,8 +68,8 @@ tr:nth-child(even) {background-color: #E38080;}
   </table>
 </div>
   
-<div>
-  <img src="hangul chart_1.jpg" class="w3-border w3-padding" alt="Hangul Basics" style="margin:auto;">
+<div style="margin:auto;">
+  <img src="hangul chart_1.jpg" class="w3-border w3-padding" alt="Hangul Basics">
   <h3> Hangul Basics </h3>
 </div>    
 
