--- a/index.html
+++ b/index.html
@@ -1,136 +1,71 @@
-
 <!DOCTYPE html>
 <html>
-  <head>
-    <title> CHS Korean Club </title>
-    <link rel="icon" href="icon2.png">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>    
-    <style>
-      body {
-        font-family: "Helvetica", "Verdana", Sans-serif;
-      }
-      h1, h2, h3, h4, h5, h6 {
-        font-family: "Playfair Display";
-        letter-spacing: 5px;
-      }
-    </style>
-  <body>
-<!-- Navbar (sit on top) -->
-<div class="w3-top">
-  <div class="w3-container">
-    <div class="w3-bar w3-white w3-padding w3-card w3-wide" style="letter-spacing:4px;">
-    <a href="http://liliumorca.github.io" class="w3-bar-item w3-button">CHS Korean Club</a>
-    <!-- Right-sided navbar links. Hide them on small screens -->
-      <div class="w3-right w3-hide-small">
-      <a href="https://liliumorca.github.io/" class="w3-bar-item w3-button"><i class="fas fa-home"></i>Home</a>
-      <a href="http://liliumorca.github.io/about.html" class="w3-bar-item w3-button"><i class="far fa-question-circle"></i>About Us</a>
-      <a href="https://liliumorca.github.io/activities.html" class="w3-bar-item w3-button"><i class="fas fa-image"></i></i>Activities</a>
-      <a href="https://liliumorca.github.io/contacts.html" class="w3-bar-item w3-button"><i class="fas fa-address-book"></i>Contacts</a>
-      <a href="https://liliumorca.github.io/resources.html" class="w3-bar-item w3-button"><i class="fas fa-folder"></i>Resources</a>
-      </div>
-    </div>
-  </div>
-</div>
-<br>
-<br>
-<br>
-<br>
-<!-- Header -->
-<header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
-  <div class="w3-display-bottomleft w3-padding-large w3-opacity">
-    <h1 class="w3-xxlarge">Le Catering</h1>
-  </div>
-</header>
+<title>W3.CSS</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<body>
 
-  <br>
-  <br>
-  <br>
-  <br>
-  
-<!-- Page content -->
-<div class="w3-content" style="max-width:1100px">
-  
- <div class="w3-container">
-   <h1><i class="fas fa-image"></i><br>2019-2020</div>
-  </div>
-  
+<div class="w3-container w3-teal">
+  <h1>Summer 2015</h1>
+</div>
+
 <div class="w3-row-padding w3-margin-top">
-  <!-- row 1, column 1 -->
   <div class="w3-third">
     <div class="w3-card">
-      <img src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2809&q=80rhdtk.png" style="width:100%;">
-      <div class="w3-container>
-        <h5> Image Caption </h5>
+      <img src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2809&q=80rhdtk.png" style="width:100%">
+      <div class="w3-container">
+        <h5>5 Terre</h5>
       </div>
     </div>
   </div>
-  <!-- row 1, column 2 -->
+
   <div class="w3-third">
     <div class="w3-card">
-      <img src="https://images.unsplash.com/photo-1510531704581-5b2870972060?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1952&q=80" style="width:100%;">
-      <div class="w3-container>
-        <h5> Image Caption </h5>
+      <img src="https://images.unsplash.com/photo-1510531704581-5b2870972060?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1952&q=80" style="width:100%">
+      <div class="w3-container">
+        <h5>Monterosso</h5>
       </div>
     </div>
   </div>
-  <!-- row 1, column 3 -->
+
   <div class="w3-third">
     <div class="w3-card">
-      <img src="https://images.unsplash.com/photo-1513542789411-b6a5d4f31634?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1567&q=80" style="width:100%;">
-      <div class="w3-container>
-        <h5> Image Caption </h5>
+      <img src="https://images.unsplash.com/photo-1513542789411-b6a5d4f31634?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1567&q=80" style="width:100%">
+      <div class="w3-container">
+        <h5>Vernazza</h5>
       </div>
     </div>
   </div>
 </div>
+
 <div class="w3-row-padding w3-margin-top">
-  <!-- row 2, column 1 -->
   <div class="w3-third">
     <div class="w3-card">
-      <img src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2809&q=80rhdtk.png" style="width:100%;">
-      <div class="w3-container>
-        <h5> Image Caption </h5>
+      <img src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2809&q=80rhdtk.png" style="width:100%">
+      <div class="w3-container">
+        <h5>5 Terre</h5>
       </div>
     </div>
   </div>
-  <!-- row 2, column 2 -->
+
   <div class="w3-third">
     <div class="w3-card">
-      <img src="https://images.unsplash.com/photo-1510531704581-5b2870972060?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1952&q=80" style="width:100%;">
-      <div class="w3-container>
-        <h5> Image Caption </h5>
+      <img src="https://images.unsplash.com/photo-1510531704581-5b2870972060?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1952&q=80" style="width:100%">
+      <div class="w3-container">
+        <h5>Monterosso</h5>
       </div>
     </div>
   </div>
-  <!-- row 2, column 3 -->
+
   <div class="w3-third">
     <div class="w3-card">
-      <img src="https://images.unsplash.com/photo-1513542789411-b6a5d4f31634?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1567&q=80" style="width:100%;">
-      <div class="w3-container>
-        <h5> Image Caption </h5>
+      <img src="https://images.unsplash.com/photo-1513542789411-b6a5d4f31634?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1567&q=80" style="width:100%">
+      <div class="w3-container">
+        <h5>Vernazza</h5>
       </div>
     </div>
   </div>
 </div>
-<!-- End page content -->
-</div>
-    
-<br>
-<br>
-<br>
-<br> 
-<br>
-<br>
-<br>
-<br>   
-  
-<!-- Footer -->
-<footer class="w3-center w3-light-grey w3-padding-32">
-  <p>Coronado Korean Club</p>
-</footer>
 
 </body>
 </html>
