--- a/index.html
+++ b/index.html
@@ -1,71 +1,71 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<body>
+  <head>
+    <title>Picture Album Example</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  </head>
+  <body>
+    <div class="w3-container w3-teal">
+      <h1>Activities 2019 - 2020</h1>
+    </div>
 
-<div class="w3-container w3-teal">
-  <h1>Summer 2015</h1>
-</div>
+    <div class="w3-row-padding w3-margin-top">
+      <div class="w3-third">
+        <div class="w3-card">
+          <img src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2809&q=80rhdtk.png" style="width:100%">
+          <div class="w3-container">
+            <h5>Row 1, Column 1</h5>
+          </div>
+        </div>
+      </div>
 
-<div class="w3-row-padding w3-margin-top">
-  <div class="w3-third">
-    <div class="w3-card">
-      <img src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2809&q=80rhdtk.png" style="width:100%">
-      <div class="w3-container">
-        <h5>5 Terre</h5>
+      <div class="w3-third">
+        <div class="w3-card">
+          <img src="https://images.unsplash.com/photo-1462536943532-57a629f6cc60?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1952&q=80" style="width:100%">
+          <div class="w3-container">
+            <h5>Row 1, Column 2</h5>
+          </div>
+        </div>
+      </div>
+
+      <div class="w3-third">
+        <div class="w3-card">
+          <img src="https://images.unsplash.com/photo-1513542789411-b6a5d4f31634?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1567&q=80" style="width:100%">
+          <div class="w3-container">
+            <h5>Row 1, Column 3</h5>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="w3-third">
-    <div class="w3-card">
-      <img src="https://images.unsplash.com/photo-1462536943532-57a629f6cc60?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1952&q=80" style="width:100%">
-      <div class="w3-container">
-        <h5>Monterosso</h5>
+    <div class="w3-row-padding w3-margin-top">
+      <div class="w3-third">
+        <div class="w3-card">
+          <img src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2809&q=80rhdtk.png" style="width:100%">
+          <div class="w3-container">
+            <h5>Row 2, Column 1</h5>
+          </div>
+        </div>
+      </div>
+
+      <div class="w3-third">
+        <div class="w3-card">
+          <img src="https://images.unsplash.com/photo-1510531704581-5b2870972060?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1952&q=80" style="width:100%">
+          <div class="w3-container">
+            <h5>Row 2, Column 2</h5>
+          </div>
+        </div>
+      </div>
+
+      <div class="w3-third">
+        <div class="w3-card">
+          <img src="https://images.unsplash.com/photo-1513542789411-b6a5d4f31634?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1567&q=80" style="width:100%">
+          <div class="w3-container">
+            <h5>Row 3, Column 3</h5>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-
-  <div class="w3-third">
-    <div class="w3-card">
-      <img src="https://images.unsplash.com/photo-1513542789411-b6a5d4f31634?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1567&q=80" style="width:100%">
-      <div class="w3-container">
-        <h5>Vernazza</h5>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="w3-row-padding w3-margin-top">
-  <div class="w3-third">
-    <div class="w3-card">
-      <img src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2809&q=80rhdtk.png" style="width:100%">
-      <div class="w3-container">
-        <h5>5 Terre</h5>
-      </div>
-    </div>
-  </div>
-
-  <div class="w3-third">
-    <div class="w3-card">
-      <img src="https://images.unsplash.com/photo-1510531704581-5b2870972060?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1952&q=80" style="width:100%">
-      <div class="w3-container">
-        <h5>Monterosso</h5>
-      </div>
-    </div>
-  </div>
-
-  <div class="w3-third">
-    <div class="w3-card">
-      <img src="https://images.unsplash.com/photo-1513542789411-b6a5d4f31634?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1567&q=80" style="width:100%">
-      <div class="w3-container">
-        <h5>Vernazza</h5>
-      </div>
-    </div>
-  </div>
-</div>
-
-</body>
+  </body>
 </html>
