--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="w3-row-padding w3-margin-top">
       <div class="w3-third">
         <div class="w3-card">
-          <img src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2809&q=80rhdtk.png" style="width:100%">
+          <img class="w3-opacity w3-hover-opacity-off" src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2809&q=80rhdtk.png" style="width:100%">
           <div class="w3-container">
             <h5>Row 1, Column 1</h5>
           </div>
