--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="w3-row-padding w3-margin-top">
       <div class="w3-third">
         <div class="w3-card">
-          <img class="w3-opacity w3-hover-opacity-off" src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2809&q=80rhdtk.png" style="width:100%">
+          <img class="w3-opacity w3-hover-opacity-off" src="https://www.w3schools.com/w3css/img_5terre.jpg" style="width:100%">
           <div class="w3-container">
             <h5>Row 1, Column 1</h5>
           </div>
@@ -22,7 +22,7 @@
 
       <div class="w3-third">
         <div class="w3-card">
-          <img src="https://images.unsplash.com/photo-1462536943532-57a629f6cc60?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1952&q=80" style="width:100%">
+          <img class="w3-hover-grayscale" src="https://www.w3schools.com/w3css/img_monterosso.jpg" style="width:100%">
           <div class="w3-container">
             <h5>Row 1, Column 2</h5>
           </div>
@@ -31,7 +31,7 @@
 
       <div class="w3-third">
         <div class="w3-card">
-          <img src="https://images.unsplash.com/photo-1513542789411-b6a5d4f31634?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1567&q=80" style="width:100%">
+          <img class="w3-hover-sepia" src="https://www.w3schools.com/w3css/img_vernazza.jpg" style="width:100%">
           <div class="w3-container">
             <h5>Row 1, Column 3</h5>
           </div>
@@ -42,7 +42,7 @@
     <div class="w3-row-padding w3-margin-top">
       <div class="w3-third">
         <div class="w3-card">
-          <img src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2809&q=80rhdtk.png" style="width:100%">
+          <img src="https://www.w3schools.com/w3css/img_manarola.jpg" style="width:100%">
           <div class="w3-container">
             <h5>Row 2, Column 1</h5>
           </div>
@@ -51,7 +51,7 @@
 
       <div class="w3-third">
         <div class="w3-card">
-          <img src="https://images.unsplash.com/photo-1510531704581-5b2870972060?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1952&q=80" style="width:100%">
+          <img src="https://www.w3schools.com/w3css/img_corniglia.jpg" style="width:100%">
           <div class="w3-container">
             <h5>Row 2, Column 2</h5>
           </div>
@@ -60,7 +60,7 @@
 
       <div class="w3-third">
         <div class="w3-card">
-          <img src="https://images.unsplash.com/photo-1513542789411-b6a5d4f31634?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1567&q=80" style="width:100%">
+          <img src="https://www.w3schools.com/w3css/img_riomaggiore.jpg" style="width:100%">
           <div class="w3-container">
             <h5>Row 3, Column 3</h5>
           </div>
